FestinaLenteApp/src/objects/Booking__c.object
<CustomObject>
    <customHelpPage>Help</customHelpPage>
    <fields>
        <fullName>AvailableDatesBooked__c</fullName>
        <label>Available Dates Booked</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailableDates__c</fullName>
        <formula>Class__r.AvailableDateCount__c</formula>
        <label>Available Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BookedDates__c</fullName>
        <formula>HYPERLINK(&apos;/apex/EditBookedDates?bookingId=&apos; + Id + &apos;&amp;retURL=/&apos; + Class__r.Id, &apos;Edit&apos;, &quot;_self&quot;)</formula>
        <label>Booked Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassCoach__c</fullName>
        <formula>HYPERLINK(Class__r.Coach__r.Id, Class__r.Coach__r.FirstName + &apos; &apos; + Class__r.Coach__r.LastName, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Coach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassType__c</fullName>
        <formula>TEXT( Class__r.Type__c )</formula>
        <label>Class Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClientLevel__c</fullName>
        <formula>TEXT(Client__r.Level__c)</formula>
        <label>Client Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientPreferredHorse__c</fullName>
        <formula>HYPERLINK(Client__r.PreferredHorse__r.Id, Client__r.PreferredHorse__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Preferred Horse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EarliestBookedDate__c</fullName>
        <label>Earliest Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestBookedDate__c</fullName>
        <label>Latest Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>ClientLevel__c</columns>
        <columns>ClientPreferredHorse__c</columns>
        <columns>Class__c</columns>
        <columns>ClassType__c</columns>
        <columns>ClassCoach__c</columns>
        <columns>EarliestBookedDate__c</columns>
        <columns>LatestBookedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>